; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/ap/extr_wpa_auth.c_wpa_auth_pmksa_free_cb.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/ap/extr_wpa_auth.c_wpa_auth_pmksa_free_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rsn_pmksa_cache_entry = type { i32 }
%struct.wpa_authenticator = type { i32 }

@wpa_auth_pmksa_clear_cb = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rsn_pmksa_cache_entry*, i8*)* @wpa_auth_pmksa_free_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wpa_auth_pmksa_free_cb(%struct.rsn_pmksa_cache_entry* %0, i8* %1) #0 {
  %3 = alloca %struct.rsn_pmksa_cache_entry*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.wpa_authenticator*, align 8
  store %struct.rsn_pmksa_cache_entry* %0, %struct.rsn_pmksa_cache_entry** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.wpa_authenticator*
  store %struct.wpa_authenticator* %7, %struct.wpa_authenticator** %5, align 8
  %8 = load %struct.wpa_authenticator*, %struct.wpa_authenticator** %5, align 8
  %9 = load i32, i32* @wpa_auth_pmksa_clear_cb, align 4
  %10 = load %struct.rsn_pmksa_cache_entry*, %struct.rsn_pmksa_cache_entry** %3, align 8
  %11 = call i32 @wpa_auth_for_each_sta(%struct.wpa_authenticator* %8, i32 %9, %struct.rsn_pmksa_cache_entry* %10)
  ret void
}

declare dso_local i32 @wpa_auth_for_each_sta(%struct.wpa_authenticator*, i32, %struct.rsn_pmksa_cache_entry*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
